# slimnine

./: .gitignore  .nojekyll  CLAUDE.md  README.md  index.html  listings.json  pyproject.toml  search.json
docs/: _quarto.yml  index.qmd
docs/examples/: _metadata.yml  wafer_maps.qmd
examples/: wafer_maps.html
scripts/: build_example_data.py
site_libs/bootstrap/: bootstrap-90f37330ed895688cfdf5d6e12e157e0.min.css
src/slimnine/: __init__.py  example_data.py  munges.py  plots.py  wafer_maps.py
src/slimnine/data/: example_wafers.parquet
tests/: test_example_data.py
