[project]
name = "slimnine"
version = "0.1.0"
description = "Personal data analytics module — plotnine wrappers, pandas/polars helpers, and stats utilities"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "plotnine>=0.13",
    "pandas>=2.2",
    "polars>=0.20",
]

[project.optional-dependencies]
stats = [
    "scipy>=1.11",
    "statsmodels>=0.14",
]
ml = [
    "scikit-learn>=1.4",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "ipykernel>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/slimnine"]

[tool.uv]
package = true

[tool.ruff]
line-length = 88
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
